# EasyToDo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  打包指南.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
